# equitrain

./: .gitignore  LICENSE  README.md  environment.yml  preprocess.py  pyproject.toml
.github/workflows/: actions.yml  mkdocs-deploy.yml  publish.yml
data/alexandria/: 01_download.py  02_convert_to_xyz.py  03_join.py  04_xyz_to_hdf5.py  makefile
data/alexandria+mptraj/: 02_mptraj_to_xyz.py
data/mptraj/: 01_json_to_xyz.py  02_xyz_to_hdf5.py
equitrain/: __init__.py  __main__.py  ani_wrapper.py  argparser.py  checkpoint.py  evaluate.py  logger.py  loss.py  loss_fn.py  loss_metrics.py  model.py  model_freeze.py  model_wrappers.py  predict.py  preprocess.py  train.py  train_checkpoint.py  train_fabric.py  train_lightning.py  train_metrics.py  train_optimizer.py  train_scheduler.py  utility.py
equitrain/backends/: __init__.py  common.py  jax_backend.py  jax_checkpoint.py  jax_evaluate.py  jax_freeze.py  jax_loss.py  jax_loss_fn.py  jax_loss_metrics.py  jax_nnx_compat.py  jax_optimizer.py  jax_predict.py  jax_runtime.py  jax_scheduler.py  jax_utils.py  jax_wrappers.py  scheduler_common.py  torch_backend.py  torch_checkpoint.py  torch_evaluate.py  torch_freeze.py  torch_loss.py  torch_loss_fn.py  torch_loss_metrics.py  torch_model.py  torch_optimizer.py  torch_predict.py  torch_scheduler.py  torch_utils.py  torch_wrappers.py
equitrain/backends/jax_wrappers/: __init__.py  ani.py  m3gnet.py  mace.py
equitrain/backends/torch_derivatives/: force.py  stress.py
equitrain/backends/torch_wrappers/: __init__.py  ani.py  base.py  m3gnet.py  mace.py  orb.py  sevennet.py
equitrain/calculators/: __init__.py  jax_wrapper.py  torch_wrapper.py
equitrain/data/: __init__.py  atomic.py  configuration.py  loaders.py  loaders_dynamic.py  scatter.py  statistics.py  statistics_data.py  utility.py
equitrain/data/backend_jax/: __init__.py  atoms_to_graphs.py  atoms_to_graphs_impl.py  loaders.py  loaders_impl.py  loaders_impl_cache.py  statistics.py
equitrain/data/backend_torch/: __init__.py  atoms_to_graphs.py  loaders.py  loaders_impl.py  scatter.py  statistics.py  utility.py
equitrain/data/format_hdf5/: __init__.py  dataset.py  utility.py
equitrain/data/format_lmdb/: NOTE.md  __init__.py  aselmdb_xyz.py  lmdb.py  lmdb_pre.py  lmdb_preprocess.py  lmdb_to_xyz.py
equitrain/data/format_xyz/: __init__.py  atomic_numbers.py  dataset.py  load.py  reader.py
equitrain/data/graphs/: __init__.py  atoms_to_graphs.py  neighborhood.py
equitrain/derivatives/: force.py  stress.py
equitrain/finetune/: __init__.py  _lora_common.py  delta_jax.py  delta_torch.py  lora_jax.py  lora_torch.py
equitrain/scripts/: __init__.py  equitrain.py  equitrain_evaluate.py  equitrain_export.py  equitrain_hdf5_benchmark.py  equitrain_hdf5_info.py  equitrain_inspect.py  equitrain_predict.py  equitrain_preprocess.py
equitrain/utility_test/: __init__.py  mace_support.py  wrapper_ani.py  wrapper_m3gnet.py  wrapper_mace.py  wrapper_orb.py  wrapper_sevennet.py
models/mace/: mace-initial-model.py
resources/data/alexandria/: 01_download.py  03_join.py  04_xyz_to_hdf5.py
resources/data/alexandria+mptraj/: 01_alexandria_download.py  02_alexandria_to_xyz.py  02_mptraj_to_xyz.py  03_join.py  04_xyz_to_hdf5.py  makefile
resources/data/mptraj/: 02_xyz_to_hdf5.py  makefile
resources/data/omat24/: 00_download_omat24.sh  01_aselmdb_to_hdf5.py  02_compute_statistics.py  makefile
resources/training/: README.md  mace-alex-mptraj-multigpu.sh  mace-alex-mptraj-multigpu.yaml  mace-alex-mptraj-multinode-slurm.sh  mace-alex-mptraj-multinode.sh  mace-alex-mptraj-multinode.yaml  mace-alex-mptraj.py  mace-training-alex-mptraj.py
tests/: __init__.py  conftest.py  test_backend_jax_statistics.py  test_calculators_jax.py  test_calculators_torch.py  test_evaluate_mace.py  test_export_torch_checkpoint.py  test_finetune_lora_jax.py  test_finetune_lora_torch.py  test_finetune_mace.py  test_finetune_mace_jax.py  test_finetune_mace_readout.py  test_jax_ani_wrapper.py  test_jax_evaluate.py  test_jax_freeze_mask.py  test_jax_loader_deterministic.py  test_jax_loss.py  test_jax_m3gnet_wrapper.py  test_jax_model_equivalence.py  test_jax_nnx_compat.py  test_jax_predict.py  test_jax_shard_map.py  test_jax_wrappers_registry.py  test_lmdb_conversion.py  test_mace_rmax_override.py  test_niggli_predict.py  test_predict_ani_atoms.py  test_predict_m3gnet.py  test_predict_m3gnet_structures.py  test_predict_mace.py  test_predict_mace_atoms.py  test_predict_mace_structures.py  test_preprocess.py  test_train_ani_energy_only.py  test_train_m3gnet.py  test_train_mace.py  test_train_mace_fabric.py  test_train_mace_jax.py  test_train_mace_jax_backend.py  test_train_mace_lightning.py  (+2 more)
tests/data/: statistics.json  train.h5  valid.h5
(+12 files in other folders)
